# spmalloc

./: .gitignore  Makefile  README.md  malloc.cpp
gtest/: CMakeLists.txt  SpMallocTests.cpp
